# Fund_Alg

./: .gitignore  README.md
Lab1_2/: 2.c
Lab1_5/: 5.c  summa
Lab1_7/: 7.c  file_ar  output_a.txt
Lab1_8/: 8.c  file_ss
Lab1_9/: 9.1.c
Lab_1/Experimenting with the str_cmd library/Lab1_7/: 7.c  input1_r.txt
Lab_1/Experimenting with the str_cmd library/Lab1_8/: 8.c  input.txt  output.txt
Lab_1/Lab1_4/: 4.c  test_i.txt
Lab_1/Lab1_7/: file_ar  input1.txt  input2_r.txt  output.txt  vvv_7
Lab_1/Lab1_8/: 8.c  file_ss  output.txt  vvv_8
Lab_2/: Makefile
Lab_2/Lab2_1/: 1  1.c  program
Lab_2/Lab2_2/: 12345  2.c  Makefile  geom_pow  main.c  test_geom_mean_power.c
Lab_2/Lab2_3/: 3.c  file1.txt  file2.txt   testing.txt  under_str
Lab_2/Lab2_4/: 4.c  third
Lab_2/Lab2_5/: 5.c  help  overprint
Lab_2/Lab2_7/: 7.c  dichotomy
Lab_2/Lab2_8/: 8.c  ss
Lab_2/Lab2_9/: 9.c  ss
Lab_2/test_files/: task_2_test_1_input  task_2_test_1_output  task_2_test_2_input  task_2_test_2_output  task_3_test_1_input  task_3_test_1_output  task_4_test_1_input  task_4_test_1_output  task_5_test_1_input  task_5_test_1_output  task_7_test_1_input  task_7_test_1_output  task_8_test_1_input  task_8_test_1_output
Lab_3/Lab3_1/: 1.c
sem2-lab_1/: 1.c  utility.h
sem_3/Lab_1/Experimenting with the str_cmd library/src/: string_compare.c
sem_3/Lab_1/Lab1_1/: 1  1.c  command_line_flags
sem_3/Lab_1/Lab1_10/: 10.c  ss
sem_3/Lab_1/Lab1_2/: 2  tresh
sem_3/Lab_1/Lab1_3/: 3.c  program
sem_3/Lab_1/Lab1_4/: file  out_file  out_test_a.txt  test_a.txt  test_d.txt  test_s.txt
sem_3/Lab_1/Lab1_6/: 6.c  integrals
sem_3/Lab_1/Lab1_7/: 7.c  file_ar  input3_a.txt  input4_a.txt  output_a.txt
sem_3/Lab_1/Lab1_9/: 9.2.c  91  92
sem_3/Lab_3/Lab3_1/: bit_oper
sem_4/FundAlg/Lab_1/lab_1/: CMakeLists.txt
sem_4/FundAlg/Lab_1/lab_1/include/: array.hpp  container.hpp
sem_4/FundAlg/Lab_1/lab_1/tests/: test_array.cpp
sem_4/FundAlg/Lab_1/lab_2/: CMakeLists.txt
sem_4/FundAlg/Lab_1/lab_2/include/: list.hpp
sem_4/FundAlg/Lab_1/lab_2/src/: list.cpp
sem_4/FundAlg/Lab_1/lab_2/tests/: test_list.cpp
sem_4/FundAlg/Lab_1/lab_3/: CMakeLists.txt
sem_4/FundAlg/Lab_1/lab_4/: CMakeLists.txt
sem_4/FundAlg/Lab_1/lab_5/: CMakeLists.txt
sem_4/FundAlg/Lab_1/lab_6/: CMakeLists.txt
sem_4/FundAlg/Lab_2/lab2_1/: CMakeLists.txt
sem_4/FundAlg/Lab_2/lab2_1/include/: big_int.hpp
sem_4/FundAlg/Lab_2/lab2_1/src/: big_int.cpp
sem_4/FundAlg/Lab_2/lab2_1/tests/: test_big_int.cpp
sem_4/FundAlg/Lab_2/lab2_3/: CMakeLists.txt
sem_4/FundAlg/Lab_2/lab2_3/include/: big_int.hpp
sem_4/FundAlg/Lab_2/lab2_3/tests/: test_fft.cpp
sem_4/FundAlg/Lab_2/lab2_5/: CMakeLists.txt
sem_4/FundAlg/Lab_2/lab2_5/include/: big_int.hpp
sem_4/FundAlg/Lab_2/lab2_5/src/: big_int.cpp
sem_4/FundAlg/Lab_2/lab2_5/tests/: test_big_int.cpp
sem_4/FundAlg/Lab_3/lab3_1/: CMakeLists.txt
sem_4/FundAlg/Lab_3/lab3_1/include/: BST.hpp
sem_4/FundAlg/Lab_3/lab3_1/src/: main.cpp
sem_4/FundAlg/Lab_3/lab3_1/tests/: CMakeLists.txt  test_BST.cpp  test_MyMap.cpp
sem_4/FundAlg/Lab_3/lab3_2/: CMakeLists.txt
sem_4/FundAlg/Lab_3/lab3_2/tests/: CMakeLists.txt  test_AVL.cpp  test_MyMap_AVL.cpp
sem_4/FundAlg/Lab_3/lab3_3/: CMakeLists.txt
sem_4/FundAlg/Lab_3/lab3_3/include/: MyMap.hpp
sem_4/FundAlg/Lab_3/lab3_3/src/: main.cpp
sem_4/FundAlg/Lab_3/lab3_3/tests/: CMakeLists.txt  test_MyMap_Splay.cpp  test_Splay.cpp
sem_4/FundAlg/Lab_3/lab3_4/: CMakeLists.txt
sem_4/FundAlg/Lab_3/lab3_4/include/: DefaultComparator.hpp  MyMap.hpp  RedBlack.hpp
sem_4/FundAlg/Lab_3/lab3_4/src/: main.cpp
sem_4/FundAlg/Lab_3/lab3_4/tests/: CMakeLists.txt  test_MyMap_RedBlack.cpp  test_RedBlack.cpp
sem_4/SysProg/Lab_1/lab_1/: 1.c  CMakeLists.txt
sem_4/SysProg/Lab_1/lab_2/: 2.c  CMakeLists.txt  copy  find_1  find_2
sem_4/SysProg/Lab_1/lab_3/: 3.c  CMakeLists.txt
sem_4/SysProg/Lab_1/lab_4/: client  client.c  commands.txt  common.h  server  server.c  sos
sem_4/SysProg/Lab_1/lab_5/: 5.c  CMakeLists.txt  test.c
sem_4/SysProg/Lab_1/lab_6/: app.h  client  client.c  server  server.c
sem_4/SysProg/Lab_1/lab_7/: 7.c  myls  myls.h
sem_4/SysProg/Lab_2/lab2_1/: CMakeLists.txt
sem_4/SysProg/Lab_2/lab2_1/include/: logger.hpp
sem_4/SysProg/Lab_2/lab2_1/src/: logger.cpp  main.cpp
sem_4/SysProg/Lab_2/lab2_2/: CMakeLists.txt
sem_4/SysProg/Lab_2/lab2_2/include/: blocking_queue.hpp  traffic_analyzer.hpp  traffic_generator.hpp  traffic_types.hpp
sem_4/SysProg/Lab_2/lab2_2/src/: logger.cpp  main.cpp
sem_4/SysProg/Lab_2/lab2_3/: CMakeLists.txt
sem_4/SysProg/Lab_2/lab2_3/include/: chat_common.hpp  chat_server.hpp  logger.hpp  semaphore_manager.hpp  shared_memory_manager.hpp
sem_4/SysProg/Lab_2/lab2_3/src/: chat_client.cpp  chat_server.cpp  logger.cpp
sem_4/SysProg/Lab_2/lab2_4/: CMakeLists.txt
sem_4/SysProg/Lab_2/lab2_4/include/: elevator.hpp  elevator_system.hpp  logger.hpp  passenger.hpp
sem_4/SysProg/Lab_2/lab2_4/src/: elevator.cpp  elevator_system.cpp  logger.cpp  main.cpp
sem_4/SysProg/Lab_3/: CMakeLists.txt
sem_4/SysProg/Lab_3/client/: CMakeLists.txt
sem_4/SysProg/Lab_3/client/include/: Client.hpp  Socket.hpp
sem_4/SysProg/Lab_3/client/src/: main.cpp
sem_4/SysProg/Lab_3/compile_subserver/: CMakeLists.txt  mycode.cpp
sem_4/SysProg/Lab_3/compile_subserver/include/: Compiler.hpp  SharedMemSem.hpp
sem_4/SysProg/Lab_3/compile_subserver/src/: main.cpp
sem_4/SysProg/Lab_3/game_subserver/: CMakeLists.txt
sem_4/SysProg/Lab_3/game_subserver/include/: Game.hpp
sem_4/SysProg/Lab_3/game_subserver/src/: main.cpp
sem_4/SysProg/Lab_3/main_server/: CMakeLists.txt
sem_4/SysProg/Lab_3/main_server/include/: Logger.hpp  MsgQueue.hpp  Server.hpp  SharedMemSem.hpp
sem_4/SysProg/Lab_3/main_server/src/: Server.cpp  main.cpp
sem_4/SysProg/lab_1/: CMakeLists.txt
sem_4/SysProg/lab_2/: CMakeLists.txt  file_operations.c  file_operations.h  main.c
sem_4/SysProg/lab_2/tests/: CMakeLists.txt  test_main.c
sem_4/SysProg/lab_2/tests/test_files/: test2.txt
sem_4/SysProg/lab_3/: 3.c  CMakeLists.txt  none.c
(+21 files in other folders)
